<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="LinearLayout"
    tools:orientation="vertical">
    <TextView
        style="@style/TextViewStyle"
        android:text="@string/static_2_question" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            style="@style/RadioBtnStyle"
            android:text="@string/static_2_answer_1" />

        <RadioButton
            style="@style/RadioBtnStyle"
            android:text="@string/static_2_answer_2" />

        <RadioButton
            style="@style/RadioBtnStyle"
            android:text="@string/static_2_answer_3" />
    </RadioGroup>
</merge>