<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="LinearLayout"
    tools:orientation="vertical">
    <TextView
        style="@style/TextViewStyle"
        android:text="@string/static_4_question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            style="@style/CheckboxBtnStyle"
            android:text="@string/static_4_answer_1" />

        <CheckBox
            style="@style/CheckboxBtnStyle"
            android:text="@string/static_4_answer_2" />

        <CheckBox
            style="@style/CheckboxBtnStyle"
            android:text="@string/static_4_answer_3" />
    </LinearLayout>
</merge>